--- a/gardeningWebsite/app.css
+++ b/gardeningWebsite/app.css
@@ -150,7 +150,7 @@ footer p a {
 .card-txt button{
     border: 0;
     padding: 10px 20px;
-    background-color: #4B7BB4;
+    background-color: rgb(194, 55, 55);
     color: white;
     font-size: 1em;
     border-radius: 10px;
